# weather-chat

./: .gitignore  README.md  probe.py  pyproject.toml
src/: llm.py  main.py  tools.py
tests/: test_api.py
