[project]
name = "elyos-chat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["anthropic", "httpx", "rich", "python-dotenv"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests", "test_api.py"]

[project.scripts]
chat = "main:run"
